feat: database connect

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -1,8 +1,15 @@
 ktor {
+    database {
+        url = "jdbc:mysql://localhost:3306/template_app?useSSL=false"
+        url = ${?DATABASE_URL}
+        user = "root"
+        user = ${?DATABASE_USERNAME}
+        password = "password"
+        password = ${?DATABASE_PASSWORD}
+    }
     deployment {
         port = 8080
         port = ${?PORT}
-        watch = [application.MainKt]
     }
     application {
         modules = [ application.MainKt.module ]
