--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ ktor_version=1.4.1
 kotlin.code.style=official
 kotlin_version=1.4.10
 logback_version=1.2.1
+exposed_version=0.25.1
+mysql_connector_version=8.0.21
