feat: 依存性注入

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ kotlin.code.style=official
 kotlin_version=1.4.10
 logback_version=1.2.1
 exposed_version=0.25.1
+koin_version=2.1.6
 mysql_connector_version=8.0.21
